fix visualizer being stretched

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -519,10 +519,9 @@ header h1 {
 }
 .audio__player .audio__artwork .visualizer {
   position: absolute;
-  top: 6px;
+  top: 25%;
   left: 6px;
   width: calc(100% - 12px);
-  height: calc(100% - 6px);
   transition: opacity 200ms;
 }
 .audio__player ul {
