--- a/assets/sass/_media.scss
+++ b/assets/sass/_media.scss
@@ -343,10 +343,9 @@
     }
     .visualizer {
       position: absolute;
-      top: 6px;
+      top: 25%;
       left: 6px;
       width: calc(100% - 12px);
-      height: calc(100% - 6px);
       transition: opacity 200ms;
     }
   }
